css overflow bug

--- a/src/assets/scss/utils/utils.scss
+++ b/src/assets/scss/utils/utils.scss
@@ -13,7 +13,6 @@
   width: 100%;
   z-index: 3;
   min-height: 100vh;
-  overflow-x: hidden !important;
   > :after {
     position: absolute;
     content: "";
